buildscript {
	dependencies {
		classpath 'org.postgresql:postgresql:42.2.23.jre7'
	}
}

plugins {
	id 'org.springframework.boot' version '2.5.1'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id "org.flywaydb.flyway" version "7.12.0"
}

group = 'ru.dhabits.spring_boot_example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "14"

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter:2.5.3'
	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.3'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.3'

	implementation 'org.postgresql:postgresql:42.2.23.jre7'
	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'junit:junit:4.13.2'
    implementation 'javax.validation:validation-api:2.0.1.Final'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.3'

	compileOnly 'org.projectlombok:lombok:1.18.20'
	annotationProcessor 'org.projectlombok:lombok:1.18.20'

	implementation 'org.flywaydb:flyway-core:7.12.1'

	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
}

test {
	useJUnitPlatform()
}

targetCompatibility = JavaVersion.VERSION_14

apply plugin: 'war'
apply plugin: 'application'





